	* Fixed NOsh_parseREAD errors for input files with \r line feeds.
	* Fixed a variable setting error in the test examples
	* Fixed a bug where memory usage is reported incorrectly for large allocations on 64-bit systems
	* Added DTRSV to APBS-supplied BLAS to satisfy FEtk SuperLU dependency
	* Fixed a small bug in routines.c to print out uncharged molecule id

#############################################################################
                                 VERSION 0.5.1 
                                   July 2007
#############################################################################
- NEW FEATURES
	* Replaced APOLAR->glen and APOLAR->dime keywords with APOLAR->grid
	* Deprecated mergedx. Added mergedx2
		- mergedx2 takes the bounding box that a user wishes to calculate a map for, as well as a resolution of the output map. An output map meeting those specifications is calculated and store.
	* Added pKa tutorial
	* Added warning about strange grid settings (MGparm)
	* Fixed a bug in vpmg.c that occured when a user supplied a dielectric map with the ionic strength set to zero, causing the map to not be used.
	* Removed deprecated (as of 0.5.0) tools/manip/acc in lieu of new APOLAR APBS features
	* Added enumerations for return codes, new PBE solver (SMPBE) and linear/ nonlinear types
	* Added in code for Size-Modified PBE (SMPBE)
- BUG FIXES
	* Fixed buffer over-run problem
	* Fixed case inconsistency with inputgen.py and psize.py scripts which caused problems with some versions of Python
	* Fixed bug wherein 'bcfl sdh' behaved essentially like 'bcfl zero'.  Now we have the correct behavior:  'bcfl sdh' behaves like 'bcfl mdh' thanks to the multipole code added by Mike Schnieders.  Interestingly, this bug didn't have a major on the large-molecule test cases/examples provided by APBS but did affect the small molecule solvation energies.  Thanks to Bradley Scott Perrin for reporting this bug.
	* Added support for chain IDs in noinput.py
- BUG FIXES